# agy_adk_learn_cloud_deployed_project

./: Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  dump.txt  pyproject.toml  template.md
app/: agent.py  fast_api_app.py
app/expense_agent/: agent.py  config.py  nodes.py  schemas.py
deployment/terraform/single-project/: iam.tf
deployment/terraform/single-project/vars/: env.tfvars
submission_frontend/: .gcloudignore  Dockerfile  main.py  pyproject.toml
